# aoc

./: .gitignore  aoc.cabal
src/Y2021/: Day1.hs  Day2.hs  Day3.hs
